# quickpdf

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
crates/quickpdf-core/: Cargo.toml
crates/quickpdf-core/src/: font.rs  image.rs  lib.rs  parse.rs  text.rs
crates/quickpdf-core/src/style/: cascade.rs  matcher.rs  mod.rs  sheet.rs
crates/quickpdf-py/: Cargo.toml
crates/quickpdf-py/src/: lib.rs
docs/superpowers/plans/: 2026-05-04-phase-2a-images.md  2026-05-04-phase-2b-fonts.md
docs/superpowers/specs/: 2026-05-04-phase-2a-images-design.md  2026-05-04-phase-2b-fonts-design.md
python/quickpdf/: __init__.py  _native.pyi
tests/: test_render.py
