[package]
name = "quickpdf-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "PyO3 bindings for quickpdf-core."

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
quickpdf-core = { workspace = true }
pyo3 = { workspace = true }
